--- a/package.json
+++ b/package.json
@@ -4,18 +4,19 @@
   "description": "",
   "main": "index.ts",
   "scripts": {
-    "dev": "nodemon ./dev/test.ts",
+    "test": "nodemon ./dev/test.ts",
     "node_1": "nodemon ./dev/networkNode.ts 3001 http://localhost:3001",
     "node_2": "nodemon ./dev/networkNode.ts 3002 http://localhost:3002",
     "node_3": "nodemon ./dev/networkNode.ts 3003 http://localhost:3003",
     "node_4": "nodemon ./dev/networkNode.ts 3004 http://localhost:3004",
     "node_5": "nodemon ./dev/networkNode.ts 3005 http://localhost:3005",
-    "start":  "bash -c 'yarn node_1 & yarn node_2 & yarn node_3 & yarn node_4 & yarn node_5'"
+    "start": "bash -c 'yarn node_1 & yarn node_2 & yarn node_3 & yarn node_4 & yarn node_5'",
+    "dev": "nodemon ./dev/dev.ts"
   },
   "author": "Boris Kuznetsov",
   "license": "ISC",
   "dependencies": {
-    "@types/node": "^17.0.0",
+    "@types/node": "^17.0.6",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
     "express": "^4.17.2",
