--- a/tsconfig.json
+++ b/tsconfig.json
@@ -4,6 +4,10 @@
     "target": "es5",
     "sourceMap": true
   },
+  "include": [
+    "src",
+    "./node_modules/<common>/@types"
+  ],
   "exclude": [
     "node_modules"
   ]
