--- a/package.json
+++ b/package.json
@@ -16,12 +16,12 @@
   "author": "Boris Kuznetsov",
   "license": "ISC",
   "dependencies": {
+    "@types/express": "^4.17.13",
     "@types/node": "^17.0.6",
     "axios": "^0.24.0",
     "body-parser": "^1.19.1",
-    "express": "^4.17.2",
+    "express": "^5.0.0-alpha.8",
     "nodemon": "^2.0.15",
-    "request-promise": "^4.2.6",
     "sha256": "^0.2.0",
     "ts-node": "^10.4.0",
     "tsc": "^2.0.3",
